migarted java 11 to java 21
Signed-off-by: Sachin S P <52343650+SachinPremkumar@users.noreply.github.com>